# libcrtc2

./: .gitignore  BUILD.gn  CMakeLists.txt  README.md  build.py  build.sh  root.gn
examples/: peerconnection.cc  worker.cc
include/: crtc.h  utils.hpp
scripts/: setup-ubuntu.sh
src/: arraybuffer.cc  arraybuffer.h  async.cc  atomic.cc  audiobuffer.cc  audiobuffer.h  audiodevice.h  audiosink.cc  audiosink.h  audiosource.cc  audiosource.h  customaudiodecoder.cc  customaudiodecoder.h  customaudiofactory.cc  customaudiofactory.h  customdecoder.cc  customdecoder.h  customdecoderfactory.cc  customdecoderfactory.h  customvideodecoder.cc  customvideodecoder.h  customvideofactory.cc  customvideofactory.h  error.cc  error.h  event.cc  event.h  fakeaudiodevice.cc  fakeaudiodevice.h  imagebuffer.cc  imagebuffer.h  mediadevices.cc  mediadevices.h  mediastream.cc  mediastream.h  mediastreamtrack.cc  mediastreamtrack.h  module.cc  module.h  promise.h  (+16 more)
